samples/_failures_safe/1761639909_073b3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aab9c300.c: In function ‘main’:
./samples/SAFE/__tmp_aab9c300.c:160:18: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  160 |     free_matrix(&mat
      |                  ^~~
      |                  mat2
./samples/SAFE/__tmp_aab9c300.c:160:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_aab9c300.c:160:21: error: expected ‘)’ at end of input
  160 |     free_matrix(&mat
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_aab9c300.c:160:5: error: expected declaration or statement at end of input
  160 |     free_matrix(&mat
      |     ^~~~~~~~~~~
